[tool.poetry]
name = "pycvesearch"
version = "1.2"
description = "Python API for CVE search."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "Apache-2.0"
repository = "https://github.com/cve-search/PyCVESearch"
readme = "README.md"

classifiers=[
    'License :: OSI Approved :: Apache Software License',
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Programming Language :: Python :: 3',
    'Topic :: Security',
    'Topic :: Internet',
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pytest-cov = "^3.0.0"
types-requests = "^2.28.3"
types-setuptools = "^63.2.1"

[build-system]
requires = ["poetry_core>=1.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
